chore: update calendar picker

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@hookform/resolvers": "^3.9.0",
     "@nestjs/mapped-types": "*",
     "@reduxjs/toolkit": "^2.2.7",
-    "@types/react-datepicker": "^7.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "eslint-plugin-prettier": "^5.2.1",
@@ -24,7 +23,7 @@
     "lodash.get": "^4.4.2",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
-    "react-datepicker": "^7.3.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
@@ -43,6 +42,7 @@
     "@eslint/js": "^9.9.0",
     "@types/lodash.get": "^4.4.9",
     "@types/react": "^18.3.3",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
